--- a/package.json
+++ b/package.json
@@ -1,30 +1,34 @@
 {
-  "name": "feed",
-  "version": "1.0.0",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "concurrently -k -p \"[{name}]\" -n \"TypeScript,App\" -c \"yellow.bold,cyan.bold\" \"tsc -w\" \"nodemon\""
-  },
-  "author": "",
-  "license": "ISC",
-  "description": "",
-  "dependencies": {
-    "@fastify/autoload": "^6.3.1",
-    "@fastify/env": "^5.0.2",
-    "@fastify/sensible": "^6.0.3",
-    "@fastify/type-provider-json-schema-to-ts": "^5.0.0",
-    "fastify": "^5.6.0",
-    "fastify-plugin": "^5.0.1",
-    "json-schema-to-ts": "^3.1.1"
-  },
-  "devDependencies": {
-    "@types/node": "^24.5.1",
-    "concurrently": "^9.2.1",
-    "cross-env": "^10.0.0",
-    "nodemon": "^3.1.10",
-    "ts-node": "^10.9.2",
-    "tsconfig-paths": "^4.2.0",
-    "typescript": "^5.9.2"
-  }
+	"name": "feed",
+	"version": "1.0.0",
+	"main": "index.js",
+	"scripts": {
+		"test": "echo \"Error: no test specified\" && exit 1",
+		"dev": "concurrently -k -p \"[{name}]\" -n \"TypeScript,App\" -c \"yellow.bold,cyan.bold\" \"tsc -w\" \"nodemon\"",
+		"format": "npx @biomejs/biome format --write",
+		"lint": "npx @biomejs/biome lint --write",
+		"check": "npx @biomejs/biome check --write"
+	},
+	"author": "",
+	"license": "ISC",
+	"description": "",
+	"dependencies": {
+		"@fastify/autoload": "^6.3.1",
+		"@fastify/env": "^5.0.2",
+		"@fastify/sensible": "^6.0.3",
+		"@fastify/type-provider-json-schema-to-ts": "^5.0.0",
+		"fastify": "^5.6.0",
+		"fastify-plugin": "^5.0.1",
+		"json-schema-to-ts": "^3.1.1"
+	},
+	"devDependencies": {
+		"@biomejs/biome": "^2.2.4",
+		"@types/node": "^24.5.1",
+		"concurrently": "^9.2.1",
+		"cross-env": "^10.0.0",
+		"nodemon": "^3.1.10",
+		"ts-node": "^10.9.2",
+		"tsconfig-paths": "^4.2.0",
+		"typescript": "^5.9.2"
+	}
 }
