--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
 		"@fastify/env": "^5.0.2",
 		"@fastify/sensible": "^6.0.3",
 		"@fastify/type-provider-json-schema-to-ts": "^5.0.0",
+		"@prisma/client": "^6.16.2",
 		"fastify": "^5.6.0",
 		"fastify-plugin": "^5.0.1",
 		"json-schema-to-ts": "^3.1.1"
