--- a/package.json
+++ b/package.json
@@ -21,11 +21,12 @@
 		"@prisma/client": "^6.16.2",
 		"fastify": "^5.6.0",
 		"fastify-plugin": "^5.0.1",
-		"json-schema-to-ts": "^3.1.1"
+		"json-schema-to-ts": "^3.1.1",
+		"prisma": "^6.16.2"
 	},
 	"devDependencies": {
 		"@biomejs/biome": "^2.2.4",
-		"@types/node": "^24.5.1",
+		"@types/node": "^24.5.2",
 		"concurrently": "^9.2.1",
 		"cross-env": "^10.0.0",
 		"nodemon": "^3.1.10",
