--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
 		"fastify": "^5.6.0",
 		"fastify-plugin": "^5.0.1",
 		"json-schema-to-ts": "^3.1.1",
-		"prisma": "^6.16.2"
+		"prisma": "^6.16.2",
+		"rss-parser": "^3.13.0"
 	},
 	"devDependencies": {
 		"@biomejs/biome": "^2.2.4",
