--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,9 +20,11 @@ services:
   mongo:
       image: mongo:6.0
       container_name: mongo
+      command: ["--replSet", "rs0", "--bind_ip_all"]
       restart: unless-stopped
       volumes:
       - mongo_data:/data/db
+      - ./init-mongo.js:/docker-entrypoint-initdb.d/init-mongo.js:ro
       ports:
       - "27017:27017"
 
